@@ -1,3 +1,14 @@
+2002-11-09  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/bytecode.cpp (AppendString): String concatenation broken
+	when using (int)char - bug 3363.
+	* src/expr.cpp (ProcessAmbiguousName): Another case of
+	placeholder_type assertion - bug 3359.
+
+2002-11-09  Chris Dennis  <chris.dennis@invidi.com>
+
+	* src/error.cpp (InitializeMessages): For loop variables (again).
+
 2002-11-07  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/error.cpp (NotDot): Fix logic.
